kubernetes/app-fe-combined-pod.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "app-deployment"
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: api
          image: gcr.io/cloudjlb-eventer/spring-boot-app:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 8080

        - name: app-nginx
          image: gcr.io/cloudjlb-eventer/web-frontend:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
           - containerPort: 80
