kubernetes/fe-pod-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "fe-deployment"
spec:
  replicas: 3
  template:
    metadata:
      labels:
        frontend: boot-frontend
    spec:
      containers:
        - name: app-nginx
          image: gcr.io/cloudjlb-eventer/web-frontend:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
           - containerPort: 80
