kubernetes/app-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: boot-app
  labels:
    run: boot-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: spring-boot-app
