kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: boot-app
  labels:
    run: boot-app
spec:
  type: NodePort

  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-app
