kubernetes/fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  labels:
    run: fe-service
spec:
  type: NodePort

  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    frontend: boot-frontend
